--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -17,6 +17,10 @@
 <!ENTITY Ctr_window			"okno">
 <!ENTITY Ctr_centered		"Centered">
 <!ENTITY Ctr_page			"Page">
+<!ENTITY Ctr_position		"Position">
+<!ENTITY Ctr_appearance		"Appearance">
+<!ENTITY Ctr_left			"Left">
+<!ENTITY Ctr_right			"Right">
 
 <!ENTITY Ctr_cuibuttons		"Tlačítka">
 <!ENTITY Ctr_cuibutnormal	"Normální">
@@ -40,9 +44,9 @@
 <!ENTITY Ctr_tabforminfo	"Vzhled panelů je určen současným motivem vzhledu.">
 <!ENTITY Ctr_coltabsinfo	"Vzhled panelu není plně kompatibilní s rozšířením 'ColorfulTabs'!">
 <!ENTITY Ctr_tabsontop0		"Panely navrchu (výchozí)">
-<!ENTITY Ctr_tabsontop1		"Panely navrchu --- nastaveno [tabsontop=true]">
-<!ENTITY Ctr_tabsontop2		"Panely pod adresním řádkem (v1) --- nastaveno [tabsontop=false]">
-<!ENTITY Ctr_tabsontop3		"Panely pod adresním řádkem (v2) --- nastaveno [tabsontop=false]">
+<!ENTITY Ctr_tabsontop1		"Panely navrchu - nastaveno [tabsontop=true]">
+<!ENTITY Ctr_tabsontop2		"Panely pod adresním řádkem (v1) - nastaveno [tabsontop=false]">
+<!ENTITY Ctr_tabsontop3		"Panely pod adresním řádkem (v2) - nastaveno [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"v2 je pro některá rozšíření a kompletní témata vzhledu!">
 <!ENTITY Ctr_tabsontopI1	"Přidává atribut pro [tabsontop=true/false]">
 <!ENTITY Ctr_tabsintitlebar	"Záhlaví okna &brandShortName;">
@@ -59,6 +63,7 @@
 <!ENTITY Ctr_square_edges	"Hranaté horní rohy">
 <!ENTITY Ctr_tttitlebar		"Název panelu v &brandShortName; liště aplikace">
 <!ENTITY Ctr_ttnooverfl		"Remove overflow effect from long tab titles">
+<!ENTITY Ctr_tabtitle		"Tab title position">
 <!ENTITY Ctr_tabinsertion	"Vložit související panel za aktuální">
 <!ENTITY Ctr_emptytfavico	"Zobrazit faviconu (v případě, že ji stránka nenabízí)">
 <!ENTITY Ctr_emptytfavico_n	"Žádná">
