--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -17,6 +17,10 @@
 <!ENTITY Ctr_window			"vindue">
 <!ENTITY Ctr_centered		"Centreret">
 <!ENTITY Ctr_page			"Side">
+<!ENTITY Ctr_position		"Position">
+<!ENTITY Ctr_appearance		"Appearance">
+<!ENTITY Ctr_left			"Left">
+<!ENTITY Ctr_right			"Right">
 
 <!ENTITY Ctr_cuibuttons		"Knapper">
 <!ENTITY Ctr_cuibutnormal	"Standard">
@@ -40,9 +44,9 @@
 <!ENTITY Ctr_tabforminfo	"Fanebladenes udseende styres af det nuværende tema.">
 <!ENTITY Ctr_coltabsinfo	"Fanebladenes udseende er ikke fuldtud kompatible med tilføjelsen 'ColorfulTabs'!">
 <!ENTITY Ctr_tabsontop0		"Faneblade øverst (standard)">
-<!ENTITY Ctr_tabsontop1		"Faneblade øverst --- [tabsontop=true] attribut">
-<!ENTITY Ctr_tabsontop2		"Faneblade skal ikke være øverst (v1) --- [tabsontop=false] attribut">
-<!ENTITY Ctr_tabsontop3		"Faneblade skal ikke være øverst (v2) --- [tabsontop=false] attribut">
+<!ENTITY Ctr_tabsontop1		"Faneblade øverst - [tabsontop=true] attribut">
+<!ENTITY Ctr_tabsontop2		"Faneblade skal ikke være øverst (v1) - [tabsontop=false] attribut">
+<!ENTITY Ctr_tabsontop3		"Faneblade skal ikke være øverst (v2) - [tabsontop=false] attribut">
 <!ENTITY Ctr_tabsontopW1	"v2 er kun til nogle tilføjelser og komplette temaer!">
 <!ENTITY Ctr_tabsontopI1	"Attributten [tabsontop=true/false] bliver tilføjet">
 <!ENTITY Ctr_tabsintitlebar	"Brug &brandShortName; i titellinjen i stedet for OS titellinje">
@@ -59,6 +63,7 @@
 <!ENTITY Ctr_square_edges	"Firkantede øverste hjørner">
 <!ENTITY Ctr_tttitlebar		"Fanebladstitel i &brandShortName;-titellinje">
 <!ENTITY Ctr_ttnooverfl		"Remove overflow effect from long tab titles">
+<!ENTITY Ctr_tabtitle		"Tab title position">
 <!ENTITY Ctr_tabinsertion	"Indsæt relaterede faneblad efter aktive faneblad">
 <!ENTITY Ctr_emptytfavico	"Vis favicon (hvis stedet ikke tilbyder et)">
 <!ENTITY Ctr_emptytfavico_n	"Intet">
