--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -17,6 +17,10 @@
 <!ENTITY Ctr_window			"window">
 <!ENTITY Ctr_centered		"Centered">
 <!ENTITY Ctr_page			"Page">
+<!ENTITY Ctr_position		"Position">
+<!ENTITY Ctr_appearance		"Appearance">
+<!ENTITY Ctr_left			"Left">
+<!ENTITY Ctr_right			"Right">
 
 <!ENTITY Ctr_cuibuttons		"Buttons">
 <!ENTITY Ctr_cuibutnormal	"Normal">
@@ -40,10 +44,10 @@
 <!ENTITY Ctr_tabforminfo	"Tab appearance is controlled by the current theme.">
 <!ENTITY Ctr_coltabsinfo	"Tab appearance is not fully compatible to 'ColorfulTabs' add-on!">
 <!ENTITY Ctr_tabsontop0		"Tabs on top (default)">
-<!ENTITY Ctr_tabsontop1		"Tabs on top --- [tabsontop=true] attribute">
-<!ENTITY Ctr_tabsontop2		"Tabs not on top (v1) --- [tabsontop=false] attribute">
-<!ENTITY Ctr_tabsontop3		"Tabs not on top (v2) --- [tabsontop=false] attribute">
-<!ENTITY Ctr_tabsontopW1	"v2 is for some add-ons and complete themes only!">
+<!ENTITY Ctr_tabsontop1		"Tabs on top - [tabsontop=true] attribute">
+<!ENTITY Ctr_tabsontop2		"Tabs not on top (v1) - [tabsontop=false] attribute">
+<!ENTITY Ctr_tabsontop3		"Tabs not on top (v2) - [tabsontop=false] attribute">
+<!ENTITY Ctr_tabsontopW1	"v2 is only for some add-ons and full themes!">
 <!ENTITY Ctr_tabsontopI1	"Attribute [tabsontop=true/false] gets added to">
 <!ENTITY Ctr_tabsintitlebar	"Use &brandShortName; titlebar instead of OS titlebar">
 <!ENTITY Ctr_tabwidthdef	"(default)">
@@ -59,6 +63,7 @@
 <!ENTITY Ctr_square_edges	"Squared top corners">
 <!ENTITY Ctr_tttitlebar		"Tab title in &brandShortName; titlebar">
 <!ENTITY Ctr_ttnooverfl		"Remove overflow effect from long tab titles">
+<!ENTITY Ctr_tabtitle		"Tab title position">
 <!ENTITY Ctr_tabinsertion	"Insert related tab after current tab">
 <!ENTITY Ctr_emptytfavico	"Show favicon (if a site does not offer one)">
 <!ENTITY Ctr_emptytfavico_n	"None">
