--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -17,6 +17,10 @@
 <!ENTITY Ctr_window			"ventana">
 <!ENTITY Ctr_centered		"Centrado">
 <!ENTITY Ctr_page			"Página">
+<!ENTITY Ctr_position		"Position">
+<!ENTITY Ctr_appearance		"Appearance">
+<!ENTITY Ctr_left			"Left">
+<!ENTITY Ctr_right			"Right">
 
 <!ENTITY Ctr_cuibuttons		"Botones">
 <!ENTITY Ctr_cuibutnormal	"Normales">
@@ -40,9 +44,9 @@
 <!ENTITY Ctr_tabforminfo	"El aspecto de la pestaña está controlado por el tema decorativo actual.">
 <!ENTITY Ctr_coltabsinfo	"¡El aspecto de la pestaña no es completamente compatible con el complemento 'ColorfulTabs'!">
 <!ENTITY Ctr_tabsontop0		"Pestañas arriba (predeterminado)">
-<!ENTITY Ctr_tabsontop1		"Pestañas arriba --- atributo [tabsontop=true]">
-<!ENTITY Ctr_tabsontop2		"Pestañas no arriba (v1) --- atributo [tabsontop=false]">
-<!ENTITY Ctr_tabsontop3		"Pestañas no arriba (v2) --- atributo [tabsontop=false]">
+<!ENTITY Ctr_tabsontop1		"Pestañas arriba - atributo [tabsontop=true]">
+<!ENTITY Ctr_tabsontop2		"Pestañas no arriba (v1) - atributo [tabsontop=false]">
+<!ENTITY Ctr_tabsontop3		"Pestañas no arriba (v2) - atributo [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"¡(v2) es sólo para algunos complementos y temas decorativos completos!">
 <!ENTITY Ctr_tabsontopI1	"Se añade el atributo [tabsontop=true/false] a">
 <!ENTITY Ctr_tabsintitlebar	"Barra de título de &brandShortName;">
@@ -59,6 +63,7 @@
 <!ENTITY Ctr_square_edges	"Esquinas superiores cuadradas">
 <!ENTITY Ctr_tttitlebar		"Título de pestaña en la barra de título de &brandShortName;">
 <!ENTITY Ctr_ttnooverfl		"Remove overflow effect from long tab titles">
+<!ENTITY Ctr_tabtitle		"Tab title position">
 <!ENTITY Ctr_tabinsertion	"Insertar pestaña asociada tras la actual">
 <!ENTITY Ctr_emptytfavico	"Mostrar favicon (si un sitio no ofrece uno)">
 <!ENTITY Ctr_emptytfavico_n	"Ninguno">
