--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -17,6 +17,10 @@
 <!ENTITY Ctr_window			"aken">
 <!ENTITY Ctr_centered		"Keskele joondatud">
 <!ENTITY Ctr_page			"Leht">
+<!ENTITY Ctr_position		"Position">
+<!ENTITY Ctr_appearance		"Appearance">
+<!ENTITY Ctr_left			"Left">
+<!ENTITY Ctr_right			"Right">
 
 <!ENTITY Ctr_cuibuttons		"Nupud">
 <!ENTITY Ctr_cuibutnormal	"Tavalised">
@@ -40,9 +44,9 @@
 <!ENTITY Ctr_tabforminfo	"Kaartide välimust kontrollib praegune välimus.">
 <!ENTITY Ctr_coltabsinfo	"Kaartide välimus ei ole lisaga 'ColorfulTabs' täielikult ühilduv!">
 <!ENTITY Ctr_tabsontop0		"Kaardid kõige peal (vaikimisi)">
-<!ENTITY Ctr_tabsontop1		"Kaardid kõige peal --- atribuut [tabsontop=true]">
-<!ENTITY Ctr_tabsontop2		"Kaardid pole kõige peal (v1) --- atribuut [tabsontop=false]">
-<!ENTITY Ctr_tabsontop3		"Kaardid pole kõige peal (v2) --- atribuut [tabsontop=false]">
+<!ENTITY Ctr_tabsontop1		"Kaardid kõige peal - atribuut [tabsontop=true]">
+<!ENTITY Ctr_tabsontop2		"Kaardid pole kõige peal (v1) - atribuut [tabsontop=false]">
+<!ENTITY Ctr_tabsontop3		"Kaardid pole kõige peal (v2) - atribuut [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"v2 on ainult mõnede lisade ja täielike välimuste jaoks!">
 <!ENTITY Ctr_tabsontopI1	"Atribuut [tabsontop=true/false] lisatakse nendele:">
 <!ENTITY Ctr_tabsintitlebar	"Opsüsteemi tiitliriba asemel kasuta &brandShortName;i tiitliriba">
@@ -59,6 +63,7 @@
 <!ENTITY Ctr_square_edges	"Kandilised ülemised nurgad">
 <!ENTITY Ctr_tttitlebar		"Kaardi pealkiri &brandShortName;i tiitliribal">
 <!ENTITY Ctr_ttnooverfl		"Eemalda pikkadest kaardi pealkirjadest ületäite efekt">
+<!ENTITY Ctr_tabtitle		"Tab title position">
 <!ENTITY Ctr_tabinsertion	"Pane seotud kaardid praeguse järele">
 <!ENTITY Ctr_emptytfavico	"Näita lehe ikooni (kui sait seda ei paku)">
 <!ENTITY Ctr_emptytfavico_n	"Pole">
