--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -17,6 +17,10 @@
 <!ENTITY Ctr_window			"fenêtre">
 <!ENTITY Ctr_centered		"Centrer ce titre">
 <!ENTITY Ctr_page			"Page">
+<!ENTITY Ctr_position		"Position">
+<!ENTITY Ctr_appearance		"Appearance">
+<!ENTITY Ctr_left			"Left">
+<!ENTITY Ctr_right			"Right">
 
 <!ENTITY Ctr_cuibuttons		"Boutons :">
 <!ENTITY Ctr_cuibutnormal	"Taille normale">
@@ -40,9 +44,9 @@
 <!ENTITY Ctr_tabforminfo	"L'apparence des onglets est contrôlée par le thème actuel.">
 <!ENTITY Ctr_coltabsinfo	"L'apparence des onglets n'est pas totalement compatible avec le module « ColorfulTabs » !">
 <!ENTITY Ctr_tabsontop0		"Onglets au-dessus (réglage par défaut)">
-<!ENTITY Ctr_tabsontop1		"Onglets au-dessus --- attribut [tabsontop=true]">
-<!ENTITY Ctr_tabsontop2		"Onglets pas au-dessus (v1) --- attribut [tabsontop=false]">
-<!ENTITY Ctr_tabsontop3		"Onglets pas au-dessus (v2) --- attribut [tabsontop=false]">
+<!ENTITY Ctr_tabsontop1		"Onglets au-dessus - attribut [tabsontop=true]">
+<!ENTITY Ctr_tabsontop2		"Onglets pas au-dessus (v1) - attribut [tabsontop=false]">
+<!ENTITY Ctr_tabsontop3		"Onglets pas au-dessus (v2) - attribut [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"v2 est uniquement destiné à certains modules et thèmes complets !">
 <!ENTITY Ctr_tabsontopI1	"Assigne l'attribut [tabsontop=true/false] à :">
 <!ENTITY Ctr_tabsintitlebar	"Utiliser la barre de titre de &brandShortName; au lieu de celle du système">
@@ -59,6 +63,7 @@
 <!ENTITY Ctr_square_edges	"Coins supérieurs carrés">
 <!ENTITY Ctr_tttitlebar		"Afficher le titre de l'onglet actuel dans la barre de titre de &brandShortName;">
 <!ENTITY Ctr_ttnooverfl		"Supprimer l'effet de débordement des titres d'onglets longs">
+<!ENTITY Ctr_tabtitle		"Tab title position">
 <!ENTITY Ctr_tabinsertion	"Insérer les onglets liés à la suite de l'onglet actuel">
 <!ENTITY Ctr_emptytfavico	"Afficher un Favicon (pour les pages qui n'en proposent pas) :">
 <!ENTITY Ctr_emptytfavico_n	"Non">
