--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -17,6 +17,10 @@
 <!ENTITY Ctr_window			"la finestra">
 <!ENTITY Ctr_centered		"Centrato">
 <!ENTITY Ctr_page			"Pagina">
+<!ENTITY Ctr_position		"Position">
+<!ENTITY Ctr_appearance		"Appearance">
+<!ENTITY Ctr_left			"Left">
+<!ENTITY Ctr_right			"Right">
 
 <!ENTITY Ctr_cuibuttons		"Pulsanti">
 <!ENTITY Ctr_cuibutnormal	"Normali">
@@ -40,9 +44,9 @@
 <!ENTITY Ctr_tabforminfo	"L’aspetto delle schede è definito dal tema in uso.">
 <!ENTITY Ctr_coltabsinfo	"L’aspetto delle schede non è del tutto compatibile con il componente aggiuntivo 'ColorfulTabs'.">
 <!ENTITY Ctr_tabsontop0		"Schede in alto (predefinito)">
-<!ENTITY Ctr_tabsontop1		"Schede in alto --- attivata [tabsontop=true]">
-<!ENTITY Ctr_tabsontop2		"Schede in basso (v1) --- attivata [tabsontop=false]">
-<!ENTITY Ctr_tabsontop3		"Schede in basso (v2) --- attivata [tabsontop=false]">
+<!ENTITY Ctr_tabsontop1		"Schede in alto - attivata [tabsontop=true]">
+<!ENTITY Ctr_tabsontop2		"Schede in basso (v1) - attivata [tabsontop=false]">
+<!ENTITY Ctr_tabsontop3		"Schede in basso (v2) - attivata [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"La versione v2 è solo per alcuni componenti aggiuntivi e temi completi!">
 <!ENTITY Ctr_tabsontopI1	"Aggiunge l’attributo [tabsontop=true/false] a">
 <!ENTITY Ctr_tabsintitlebar	"Schede nella barra del titolo">
@@ -59,6 +63,7 @@
 <!ENTITY Ctr_square_edges	"Angoli superiori spigolosi">
 <!ENTITY Ctr_tttitlebar		"Titolo scheda nella barra del titolo di &brandShortName;">
 <!ENTITY Ctr_ttnooverfl		"Remove overflow effect from long tab titles">
+<!ENTITY Ctr_tabtitle		"Tab title position">
 <!ENTITY Ctr_tabinsertion	"Inserisci la scheda correlata dopo la scheda corrente">
 <!ENTITY Ctr_emptytfavico	"Mostra favicon (quando un sito ne è privo)">
 <!ENTITY Ctr_emptytfavico_n	"Nessuna">
