--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -17,6 +17,10 @@
 <!ENTITY Ctr_window			"ウィンドウ">
 <!ENTITY Ctr_centered		"中央揃え">
 <!ENTITY Ctr_page			"ページ ">
+<!ENTITY Ctr_position		"Position">
+<!ENTITY Ctr_appearance		"Appearance">
+<!ENTITY Ctr_left			"Left">
+<!ENTITY Ctr_right			"Right">
 
 <!ENTITY Ctr_cuibuttons		"ボタン">
 <!ENTITY Ctr_cuibutnormal	"通常">
@@ -40,9 +44,9 @@
 <!ENTITY Ctr_tabforminfo	"タブの見栄えは現在のテーマで制御されます。">
 <!ENTITY Ctr_coltabsinfo	"タブの見栄えは ColorfulTabs とは完全な互換性はありません！">
 <!ENTITY Ctr_tabsontop0		"タブを上にする (デフォルト)">
-<!ENTITY Ctr_tabsontop1		"タブを上にする --- [tabsontop=true] 属性">
-<!ENTITY Ctr_tabsontop2		"タブを下にする (v1) --- [tabsontop=false] 属性">
-<!ENTITY Ctr_tabsontop3		"タブを下にする (v2) --- [tabsontop=false] 属性">
+<!ENTITY Ctr_tabsontop1		"タブを上にする - [tabsontop=true] 属性">
+<!ENTITY Ctr_tabsontop2		"タブを下にする (v1) - [tabsontop=false] 属性">
+<!ENTITY Ctr_tabsontop3		"タブを下にする (v2) - [tabsontop=false] 属性">
 <!ENTITY Ctr_tabsontopW1	"v2 はいくつかのアドオンと完全なテーマ以外に互換性はありません！">
 <!ENTITY Ctr_tabsontopI1	"以下の項目に属性 [tabsontop=true/false] 属性 を加える">
 <!ENTITY Ctr_tabsintitlebar	"&brandShortName; タイトルバー">
@@ -59,6 +63,7 @@
 <!ENTITY Ctr_square_edges	"上部の角を四角くする">
 <!ENTITY Ctr_tttitlebar		"タブタイトルを &brandShortName; タイトルバーに表示する">
 <!ENTITY Ctr_ttnooverfl		"R長いタブタイトルの溢れた際の表記（...）を除去">
+<!ENTITY Ctr_tabtitle		"Tab title position">
 <!ENTITY Ctr_tabinsertion	"現在のタブの後ろに関連するタブを開く">
 <!ENTITY Ctr_emptytfavico	"ファビコンの表示（サイトのファビコンが存在しないとき）">
 <!ENTITY Ctr_emptytfavico_n	"なし">
