--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -17,6 +17,10 @@
 <!ENTITY Ctr_window			"okno">
 <!ENTITY Ctr_centered		"Wyśrodkowany">
 <!ENTITY Ctr_page			"Strona">
+<!ENTITY Ctr_position		"Position">
+<!ENTITY Ctr_appearance		"Appearance">
+<!ENTITY Ctr_left			"Left">
+<!ENTITY Ctr_right			"Right">
 
 <!ENTITY Ctr_cuibuttons		"Przyciski">
 <!ENTITY Ctr_cuibutnormal	"Normalne">
@@ -40,9 +44,9 @@
 <!ENTITY Ctr_tabforminfo	"Wygląd karty jest kontrolowany przez bieżący motyw.">
 <!ENTITY Ctr_coltabsinfo	"Wygląd karty nie jest w pełni kompatybilny z dodatkiem 'ColorfulTabs'!">
 <!ENTITY Ctr_tabsontop0		"Karty na górze (domyślne)">
-<!ENTITY Ctr_tabsontop1		"Karty na górze --- atrybut [tabsontop=true]">
-<!ENTITY Ctr_tabsontop2		"Karty nie na górze (v1) --- atrybut [tabsontop=false]">
-<!ENTITY Ctr_tabsontop3		"Karty nie na górze (v2) --- atrybut [tabsontop=false]">
+<!ENTITY Ctr_tabsontop1		"Karty na górze - atrybut [tabsontop=true]">
+<!ENTITY Ctr_tabsontop2		"Karty nie na górze (v1) - atrybut [tabsontop=false]">
+<!ENTITY Ctr_tabsontop3		"Karty nie na górze (v2) - atrybut [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"v2 jest tylko dla niektórych dodatków i kompletnych motywów!">
 <!ENTITY Ctr_tabsontopI1	"Dodaje atrybut [tabsontop=true/false] do">
 <!ENTITY Ctr_tabsintitlebar	"Użyj paska tytułu programu &brandShortName; zamiast systemowego">
@@ -59,6 +63,7 @@
 <!ENTITY Ctr_square_edges	"Kwadratowe górne rogi">
 <!ENTITY Ctr_tttitlebar		"Tytuł karty na pasku tytułu programu &brandShortName;">
 <!ENTITY Ctr_ttnooverfl		"Usuń efekt przepełnienia z długich tytułów kart">
+<!ENTITY Ctr_tabtitle		"Tab title position">
 <!ENTITY Ctr_tabinsertion	"Wstaw powiązaną kartę za kartą bieżącą">
 <!ENTITY Ctr_emptytfavico	"Pokaż ikonę ulubionych (jeżeli strona nie zaoferuje żadnej)">
 <!ENTITY Ctr_emptytfavico_n	"Brak">
