--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -17,6 +17,10 @@
 <!ENTITY Ctr_window			"Janela">
 <!ENTITY Ctr_centered		"Centralizado">
 <!ENTITY Ctr_page			"Página">
+<!ENTITY Ctr_position		"Position">
+<!ENTITY Ctr_appearance		"Appearance">
+<!ENTITY Ctr_left			"Left">
+<!ENTITY Ctr_right			"Right">
 
 <!ENTITY Ctr_cuibuttons		"Botões">
 <!ENTITY Ctr_cuibutnormal	"Normais">
@@ -40,9 +44,9 @@
 <!ENTITY Ctr_tabforminfo	"A aparência da aba é controlada pelo tema atual.">
 <!ENTITY Ctr_coltabsinfo	"A aparência da aba não é totalmente compatível coma extensão 'ColorfulTabs'!">
 <!ENTITY Ctr_tabsontop0		"Abas no topo (padrão)">
-<!ENTITY Ctr_tabsontop1		"Abas no topo --- definida [tabsontop=true]">
-<!ENTITY Ctr_tabsontop2		"Abas embaixo (v1) --- definida [tabsontop=false]">
-<!ENTITY Ctr_tabsontop3		"Abas embaixo (v2) --- definida [tabsontop=false]">
+<!ENTITY Ctr_tabsontop1		"Abas no topo - definida [tabsontop=true]">
+<!ENTITY Ctr_tabsontop2		"Abas embaixo (v1) - definida [tabsontop=false]">
+<!ENTITY Ctr_tabsontop3		"Abas embaixo (v2) - definida [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"v2 é só para alguns complementos e temas completos!">
 <!ENTITY Ctr_tabsontopI1	"Adicionar atributos [tabsontop=true/false] para">
 <!ENTITY Ctr_tabsintitlebar	"Barra de título do &brandShortName;">
@@ -59,6 +63,7 @@
 <!ENTITY Ctr_square_edges	"Cantos superiores quadrados">
 <!ENTITY Ctr_tttitlebar		"Título da aba na barra de título &brandShortName;">
 <!ENTITY Ctr_ttnooverfl		"Remove overflow effect from long tab titles">
+<!ENTITY Ctr_tabtitle		"Tab title position">
 <!ENTITY Ctr_tabinsertion	"Inserir a aba relacionada depois da aba atual">
 <!ENTITY Ctr_emptytfavico	"Exibir favicon (se o site não oferecer um)">
 <!ENTITY Ctr_emptytfavico_n	"Nenhum">
