--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -17,6 +17,10 @@
 <!ENTITY Ctr_window			"окно">
 <!ENTITY Ctr_centered		"По центру">
 <!ENTITY Ctr_page			"Страница">
+<!ENTITY Ctr_position		"Position">
+<!ENTITY Ctr_appearance		"Appearance">
+<!ENTITY Ctr_left			"Left">
+<!ENTITY Ctr_right			"Right">
 
 <!ENTITY Ctr_cuibuttons		"Кнопки:">
 <!ENTITY Ctr_cuibutnormal	"Обычные">
@@ -40,9 +44,9 @@
 <!ENTITY Ctr_tabforminfo	"Вид вкладки задаётся текущей темой.">
 <!ENTITY Ctr_coltabsinfo	"Вид вкладки не полностью совместим с расширением 'ColorfulTabs'!">
 <!ENTITY Ctr_tabsontop0		"Вкладки вверху (по умолчанию)">
-<!ENTITY Ctr_tabsontop1		"Вкладки вверху --- [tabsontop=true]">
-<!ENTITY Ctr_tabsontop2		"Вкладки не вверху (v1) --- [tabsontop=false]">
-<!ENTITY Ctr_tabsontop3		"Вкладки не вверху (v2) --- [tabsontop=false]">
+<!ENTITY Ctr_tabsontop1		"Вкладки вверху - [tabsontop=true]">
+<!ENTITY Ctr_tabsontop2		"Вкладки не вверху (v1) - [tabsontop=false]">
+<!ENTITY Ctr_tabsontop3		"Вкладки не вверху (v2) - [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"v2 только для некоторых дополнений и для полных тем!">
 <!ENTITY Ctr_tabsontopI1	"Добавляет атрибут [tabsontop=true/false] для">
 <!ENTITY Ctr_tabsintitlebar	"Использовать заголовок &brandShortName; вместо заголовка ОС">
@@ -59,6 +63,7 @@
 <!ENTITY Ctr_square_edges	"Верхние углы квадратные">
 <!ENTITY Ctr_tttitlebar		"Название вкладки в заголовке &brandShortName;">
 <!ENTITY Ctr_ttnooverfl		"Удалить эффект переполнения с длинных заголовков вкладок">
+<!ENTITY Ctr_tabtitle		"Tab title position">
 <!ENTITY Ctr_tabinsertion	"Открывать связанную вкладку после текущей вкладки">
 <!ENTITY Ctr_emptytfavico	"Показывать фавиконку (если отсутствует)">
 <!ENTITY Ctr_emptytfavico_n	"Нет">
