--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -17,6 +17,10 @@
 <!ENTITY Ctr_window			"視窗">
 <!ENTITY Ctr_centered		"文字置中">
 <!ENTITY Ctr_page			"分項">
+<!ENTITY Ctr_position		"Position">
+<!ENTITY Ctr_appearance		"Appearance">
+<!ENTITY Ctr_left			"Left">
+<!ENTITY Ctr_right			"Right">
 
 <!ENTITY Ctr_cuibuttons		"按鈕">
 <!ENTITY Ctr_cuibutnormal	"標準圖示">
@@ -40,9 +44,9 @@
 <!ENTITY Ctr_tabforminfo	"分頁外觀由目前的佈景主題控制">
 <!ENTITY Ctr_coltabsinfo	"分頁外觀設定並不完全相容於 ColorfulTabs 擴充套件!">
 <!ENTITY Ctr_tabsontop0		"分頁列置頂 (預設值)">
-<!ENTITY Ctr_tabsontop1		"分頁列置頂 --- 設定 [tabsontop=true]">
-<!ENTITY Ctr_tabsontop2		"分頁列不置頂 (v1) --- 設定 [tabsontop=false]">
-<!ENTITY Ctr_tabsontop3		"分頁列不置頂 (v2) --- 設定 [tabsontop=false]">
+<!ENTITY Ctr_tabsontop1		"分頁列置頂 - 設定 [tabsontop=true]">
+<!ENTITY Ctr_tabsontop2		"分頁列不置頂 (v1) - 設定 [tabsontop=false]">
+<!ENTITY Ctr_tabsontop3		"分頁列不置頂 (v2) - 設定 [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"對於某些擴充套件和佈景主題，若 v1 無效，可嘗試 v2!">
 <!ENTITY Ctr_tabsontopI1	"加入 [tabsontop=true/false] 屬性到">
 <!ENTITY Ctr_tabsintitlebar	"分頁列併入標題列">
@@ -59,6 +63,7 @@
 <!ENTITY Ctr_square_edges	"使分頁標籤四角為嚴格直角">
 <!ENTITY Ctr_tttitlebar		"將分頁標題文字顯示於 &brandShortName; 標題列">
 <!ENTITY Ctr_ttnooverfl		"Remove overflow effect from long tab titles">
+<!ENTITY Ctr_tabtitle		"Tab title position">
 <!ENTITY Ctr_tabinsertion	"在網頁上點選連結時，將新分頁開啟於目前分頁的旁邊，即把預設行為 [a][b][c][1][2][3] 改為 [a][1][2][3][b][c]">
 <!ENTITY Ctr_emptytfavico	"(當網站未提供圖示時)顯示替代網站圖示">
 <!ENTITY Ctr_emptytfavico_n	"無">
