--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -17,6 +17,10 @@
 <!ENTITY Ctr_window			"wokno">
 <!ENTITY Ctr_centered		"Centrowano">
 <!ENTITY Ctr_page			"Strona">
+<!ENTITY Ctr_position		"Position">
+<!ENTITY Ctr_appearance		"Appearance">
+<!ENTITY Ctr_left			"Left">
+<!ENTITY Ctr_right			"Right">
 
 <!ENTITY Ctr_cuibuttons		"Tłóčatka">
 <!ENTITY Ctr_cuibutnormal	"Normalny">
@@ -40,9 +44,9 @@
 <!ENTITY Ctr_tabforminfo	"Napohlad rajtarkow wot aktualneje drasty wotwisuje.">
 <!ENTITY Ctr_coltabsinfo	"Napohlad rajtarka njeje połnje kompatibelny z rozšěrjenjom 'ColorfulTabs'!">
 <!ENTITY Ctr_tabsontop0		"Rajtarki horjeka (standard)">
-<!ENTITY Ctr_tabsontop1		"Rajtarki horjeka --- stajće [tabsontop=true]">
-<!ENTITY Ctr_tabsontop2		"Rajtarki nic horjeka (v1) --- stajće [tabsontop=false]">
-<!ENTITY Ctr_tabsontop3		"Rajtarki nic horjeka (v2) --- stajće [tabsontop=false]">
+<!ENTITY Ctr_tabsontop1		"Rajtarki horjeka - stajće [tabsontop=true]">
+<!ENTITY Ctr_tabsontop2		"Rajtarki nic horjeka (v1) - stajće [tabsontop=false]">
+<!ENTITY Ctr_tabsontop3		"Rajtarki nic horjeka (v2) - stajće [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"v2 je jenož za někotre přidatki a dospołne drasty!">
 <!ENTITY Ctr_tabsontopI1	"Přidawa atribut [tabsontop=true/false] na">
 <!ENTITY Ctr_tabsintitlebar	"Titulnu lajstu &brandShortName; město titulneje lajsty dźěłoweho systema wužiwać">
@@ -59,6 +63,7 @@
 <!ENTITY Ctr_square_edges	"Kwadratiske hornje róžki">
 <!ENTITY Ctr_tttitlebar		"Rajtarkowy titul w titulne lajsće &brandShortName;">
 <!ENTITY Ctr_ttnooverfl		"Přeběžkowy efekt z dołhich rajtarkowych titulow wotstronić">
+<!ENTITY Ctr_tabtitle		"Tab title position">
 <!ENTITY Ctr_tabinsertion	"Přiwuzny rajtark za aktualnym rajtarkom zasadźić">
 <!ENTITY Ctr_emptytfavico	"Faworitowy symbol pokazać (jeli sydło žadyn njepodawa)">
 <!ENTITY Ctr_emptytfavico_n	"Žadyn">
