--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -17,6 +17,10 @@
 <!ENTITY Ctr_window			"okno">
 <!ENTITY Ctr_centered		"Na sredini">
 <!ENTITY Ctr_page			"Stran">
+<!ENTITY Ctr_position		"Position">
+<!ENTITY Ctr_appearance		"Appearance">
+<!ENTITY Ctr_left			"Left">
+<!ENTITY Ctr_right			"Right">
 
 <!ENTITY Ctr_cuibuttons		"Gumbi">
 <!ENTITY Ctr_cuibutnormal	"Običajno">
@@ -40,9 +44,9 @@
 <!ENTITY Ctr_tabforminfo	"Videz zavihkov nadzira trenutna tema.">
 <!ENTITY Ctr_coltabsinfo	"Videz zavihkov ni v celoti združljiv z dodatkom 'ColorfulTabs'!">
 <!ENTITY Ctr_tabsontop0		"Zavihki na vrhu (privzeto)">
-<!ENTITY Ctr_tabsontop1		"Zavihki na vrhu --- atribut [tabsontop=true]">
-<!ENTITY Ctr_tabsontop2		"Zavihki niso na vrhu (v1) --- atribut [tabsontop=false]">
-<!ENTITY Ctr_tabsontop3		"Zavihki niso na vrhu (v2) --- atribut [tabsontop=false]">
+<!ENTITY Ctr_tabsontop1		"Zavihki na vrhu - atribut [tabsontop=true]">
+<!ENTITY Ctr_tabsontop2		"Zavihki niso na vrhu (v1) - atribut [tabsontop=false]">
+<!ENTITY Ctr_tabsontop3		"Zavihki niso na vrhu (v2) - atribut [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"v2 je za nekatere dodatke in samo za celotne teme!">
 <!ENTITY Ctr_tabsontopI1	"Atribut [tabsontop=true/false] je dodan k">
 <!ENTITY Ctr_tabsintitlebar	"Nazivna vrstica &brandShortName;a">
@@ -59,6 +63,7 @@
 <!ENTITY Ctr_square_edges	"Kvadratasti zgornji koti">
 <!ENTITY Ctr_tttitlebar		"Naziv zavihka v nazivni vrstici &brandShortName;a">
 <!ENTITY Ctr_ttnooverfl		"Odstrani učinek prekoračitve zaradi dolgih nazivov zavihkov">
+<!ENTITY Ctr_tabtitle		"Tab title position">
 <!ENTITY Ctr_tabinsertion	"Vstavi odprt zavihek poleg trenutnega">
 <!ENTITY Ctr_emptytfavico	"Prikaži zaznamko (če je stran ne dobavi)">
 <!ENTITY Ctr_emptytfavico_n	"Brez">
