--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -17,6 +17,10 @@
 <!ENTITY Ctr_window			"window">
 <!ENTITY Ctr_centered		"已居中">
 <!ENTITY Ctr_page			"页面">
+<!ENTITY Ctr_position		"Position">
+<!ENTITY Ctr_appearance		"Appearance">
+<!ENTITY Ctr_left			"Left">
+<!ENTITY Ctr_right			"Right">
 
 <!ENTITY Ctr_cuibuttons		"按钮">
 <!ENTITY Ctr_cuibutnormal	"标准">
@@ -40,9 +44,9 @@
 <!ENTITY Ctr_tabforminfo	"标签页外观由当前的主题所控制">
 <!ENTITY Ctr_coltabsinfo	"标签页外观与 “ColorfulTabs” 扩展不能完全兼容!">
 <!ENTITY Ctr_tabsontop0		"标签栏在顶部 (默认)">
-<!ENTITY Ctr_tabsontop1		"标签栏在顶部 --- [tabsontop=true] 属性">
-<!ENTITY Ctr_tabsontop2		"标签栏不在顶部 (v1) --- [tabsontop=false] 属性">
-<!ENTITY Ctr_tabsontop3		"标签栏不在顶部 (v2) --- [tabsontop=false] 属性">
+<!ENTITY Ctr_tabsontop1		"标签栏在顶部 - [tabsontop=true] 属性">
+<!ENTITY Ctr_tabsontop2		"标签栏不在顶部 (v1) - [tabsontop=false] 属性">
+<!ENTITY Ctr_tabsontop3		"标签栏不在顶部 (v2) - [tabsontop=false] 属性">
 <!ENTITY Ctr_tabsontopW1	"v2 仅适用于部分扩展与完整主题!">
 <!ENTITY Ctr_tabsontopI1	"添加属性 [tabsontop=true/false] 至">
 <!ENTITY Ctr_tabsintitlebar	"&brandShortName; 标题栏">
@@ -59,6 +63,7 @@
 <!ENTITY Ctr_square_edges	"方形顶部边角">
 <!ENTITY Ctr_tttitlebar		"在 &brandShortName; 标题栏显示标签页标题">
 <!ENTITY Ctr_ttnooverfl		"移除较长标签页标题的覆盖效果">
+<!ENTITY Ctr_tabtitle		"Tab title position">
 <!ENTITY Ctr_tabinsertion	"在当前标签页后插入关联标签页">
 <!ENTITY Ctr_emptytfavico	"显示网站图标 (如果网站未提供)">
 <!ENTITY Ctr_emptytfavico_n	"无">
