Updates to the Slovenian translation

--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -17,10 +17,10 @@
 <!ENTITY Ctr_window			"okno">
 <!ENTITY Ctr_centered		"Na sredini">
 <!ENTITY Ctr_page			"Stran">
-<!ENTITY Ctr_position		"Position">
-<!ENTITY Ctr_appearance		"Appearance">
-<!ENTITY Ctr_left			"Left">
-<!ENTITY Ctr_right			"Right">
+<!ENTITY Ctr_position		"Položaj">
+<!ENTITY Ctr_appearance		"Videz">
+<!ENTITY Ctr_left			"Levo">
+<!ENTITY Ctr_right			"Desno">
 
 <!ENTITY Ctr_cuibuttons		"Gumbi">
 <!ENTITY Ctr_cuibutnormal	"Običajno">
@@ -63,7 +63,7 @@
 <!ENTITY Ctr_square_edges	"Kvadratasti zgornji koti">
 <!ENTITY Ctr_tttitlebar		"Naziv zavihka v nazivni vrstici &brandShortName;a">
 <!ENTITY Ctr_ttnooverfl		"Odstrani učinek prekoračitve zaradi dolgih nazivov zavihkov">
-<!ENTITY Ctr_tabtitle		"Tab title position">
+<!ENTITY Ctr_tabtitle		"Položaj naziva zavihka">
 <!ENTITY Ctr_tabinsertion	"Vstavi odprt zavihek poleg trenutnega">
 <!ENTITY Ctr_emptytfavico	"Prikaži zaznamko (če je stran ne dobavi)">
 <!ENTITY Ctr_emptytfavico_n	"Brez">
